# VulkanRenderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json  vcpkg.json
.cache/clangd/index/: Commands.cpp.48BFF081423F53BD.idx  Commands.h.7FF919362DF3E2C5.idx  DeletionQueue.cpp.06C29E23F84B8E32.idx  DeletionQueue.h.88FC70689338FA4B.idx  Device.cpp.BF8326034BE50379.idx  Device.h.EFB784C0297C158D.idx  Extensions.cpp.8DA1F2158CAEE214.idx  Extensions.h.6AF6D87ECEA62F4D.idx  Instance.cpp.CB3CB6AB526607A1.idx  Instance.h.CE8134B2C12005FC.idx  Layers.cpp.1FF966EE79B2605E.idx  Layers.h.3629E6DC717C1F9C.idx  Logger.cpp.82FED726AE912EF9.idx  Logger.h.D78CB5C61D667FD1.idx  Main.cpp.C447C9B52AAB5AA1.idx  Memory.cpp.C3A8C8F847AC6489.idx  Memory.h.81F254DAAF4BD60B.idx  Renderer.cpp.D6E37EB645C90A44.idx  Renderer.h.E6DE40F35C98BF04.idx  Swapchain.cpp.9B4F9D180F7AE3BA.idx  Swapchain.h.9C986B534A28DF3E.idx
VulkanRenderer/src/: Commands.cpp  Commands.h  DeletionQueue.cpp  DeletionQueue.h  Device.cpp  Device.h  Extensions.cpp  Extensions.h  Instance.cpp  Instance.h  Layers.cpp  Layers.h  Logger.cpp  Logger.h  Main.cpp  Memory.cpp  Memory.h  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h
VulkanRenderer/src/shaders/: First.frag  First.vert
VulkanRenderer/src/stubs/: Layers.cpp
helper_scripts/: run_internal.py
nvimHelperScripts/: build0.sh  run.sh
